--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,6 +107,6 @@ include-data-dir = [["MCSL2/Aria2", "MCSL2/Aria2"]]
 follow-import-to = ["Adapters", "loguru", "requests"]
 nofollow-import-to = ["numpy", "scipy", "PIL", "colorthief", "sqlite3.test"]
 
-enable-plugin = ["pyqt5", "multiprocessing"]
+enable-plugin = ["pyqt5", "multiprocessing", "pkg-resources"]
 windows-icon-from-ico = "MCSL2.ico"
 assume-yes-for-download = true
